[package]
name = "rusmpp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4.1" }
bytes = "1.10.1"
tokio-util = { version = "0.7.10", default-features = false, features = [
    "codec",
] }
rusmpp = { path = "../rusmpp", features = [
    "arbitrary",
    "tokio-codec",
], default-features = false }

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
