[package]
name = "rusmpp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
arbitrary = { version = "1.4.2" }
bytes = "1.10.1"
tokio-util = { version = "0.7.16", default-features = false, features = [
    "codec",
] }
framez = { version = "0.3.0", default-features = false }
rusmpp-core = { path = "../rusmpp-core", features = [
    "arbitrary",
    "framez",
    "tokio-codec",
], default-features = false }

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode_owned"
path = "fuzz_targets/decode_owned.rs"
test = false
doc = false

[[bin]]
name = "decode_borrowed"
path = "fuzz_targets/decode_borrowed.rs"
test = false
doc = false
