[package]
name = "rusmpp-macros"
description = "Procedural macros for Rusmpp-Core"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.1"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rusmpp/Rusmpp"
readme = "Readme.md"
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0.101"

[lib]
proc-macro = true

[dev-dependencies]
macrotest = "1.1.0"
