[package]
name = "rusmpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies]
rusmpp_macros = { path = "../rusmpp_macros" }
tokio = { version = "1.35.0", features = ["net", "io-util"] }
async-trait = "0.1.74"
thiserror = "1.0.51"
num_enum = "0.7.1"
