[package]
name = "rusmpp"
version = "0.1.0"
edition = "2021"
description = "A Rust SMPP library."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JadKHaddad/Rusmpp"
workspace = "../"
readme = "../README.md"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
dotenv = "0.15.0"

[dependencies]
rusmpp_io = { path = "../rusmpp_io" }
rusmpp_macros = { path = "../rusmpp_macros" }
tokio = { version = "1.35.0", features = ["net", "io-util"] }
async-trait = "0.1.74"
thiserror = "1.0.51"
num_enum = "0.7.1"
derivative = "2.2.0"
getset = "0.1.2"
derive_builder = "0.12.0"
