[package]
name = "rusmpp_macros"
version = "0.1.0"
edition = "2021"
description = "Rust SMPP macros. This crate is not intended to be used by users directly."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JadKHaddad/Rusmpp"
workspace = "../"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
quote = "1.0.23"
proc-macro2 = "1.0.49"
