[package]
name = "rusmppc"
version = "0.2.3"
edition = "2024"
rust-version = "1.85.1"
description = "A Rust SMPP client."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JadKHaddad/Rusmpp"
readme = "Readme.md"
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]

[dependencies]
rusmpp = { path = "../rusmpp", version = "0.2.3", default-features = false, features = [
    "tokio-codec",
    "tracing",
    "verbose",
] }
tokio = { version = "1.47.1", features = [
    "rt",
    "net",
    "sync",
    "macros",
    "io-util",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
futures = "0.3.31"
thiserror = "2.0.12"
pin-project-lite = "0.2.16"
url = "2.5.7"
rustls = { version = "0.23.32", optional = true }
tokio-rustls = { version = "0.26.3", optional = true }
rustls-pki-types = { version = "1.12.0", optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
webpki-roots = { version = "1.0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rustls = "0.23.32"
tokio-rustls = "0.26.3"
argh = "0.1.13"

[features]
default = ["rustls", "rustls-tls-native-roots", "rustls-tls-webpki-roots"]
# Enables TLS support via Rustls. Enabled by default.
rustls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pki-types"]
# Enables Rustls to use the platform's native root certificates while using default configuration. Enables the `rustls` feature and enabled by default.
rustls-tls-native-roots = ["rustls", "dep:rustls-native-certs"]
# Enables Rustls to use the webpki-roots crate's root certificates while using default configuration. Enables the `rustls` feature and enabled by default.
rustls-tls-webpki-roots = ["rustls", "dep:webpki-roots"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "manual_reconnect"
path = "examples/manual_reconnect.rs"
required-features = []

[[example]]
name = "rusmppc_submit_sm"
path = "examples/rusmppc_submit_sm.rs"
required-features = []

[[example]]
name = "tls_manual"
path = "examples/tls_manual.rs"
required-features = []

[[example]]
name = "tls_self_signed_certificate"
path = "examples/tls_self_signed_certificate.rs"
required-features = []
