[package]
name = "rusmppc"
version = "0.3.0-alpha.4"
edition = "2024"
rust-version = "1.85.1"
description = "A Rust SMPP client."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rusmpp/Rusmpp"
readme = "Readme.md"
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]

[dependencies]
rusmpp = { path = "../rusmpp", version = "0.3.0-alpha.1", default-features = false, features = [
    "tokio-codec",
    "tracing",
    "verbose",
] }
tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = { version = "0.7.15", default-features = false, features = [
    "codec",
] }
tracing = { version = "0.1.41", default-features = false }
futures = { version = "0.3.31", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
url = { version = "2.5.7", default-features = false }

rustls = { version = "0.23.34", default-features = false, features = [
    "tls12",
], optional = true }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
    "tls12",
], optional = true }

rustls-pki-types = { version = "1.12.0", default-features = false, optional = true }
rustls-native-certs = { version = "0.8.2", default-features = false, optional = true }
webpki-roots = { version = "1.0.3", default-features = false, optional = true }

native-tls = { version = "0.2.14", default-features = false, optional = true }
tokio-native-tls = { version = "0.3.1", default-features = false, optional = true }

hickory-resolver = { version = "0.25.2", default-features = false, features = [
    "tokio",
    "system-config",
] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rustls = { version = "0.23.34", default-features = false, features = [
    "logging",
    "std",
    "tls12",
] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
    "logging",
    "tls12",
] }
argh = "0.1.13"

[features]
default = [
    "rustls",
    "rustls-tls-native-roots",
    "rustls-tls-webpki-roots",
    "rustls-aws-lc-rs",
]
# Enables TLS support via Rustls. Enabled by default.
rustls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pki-types"]
# Uses the platform's native root certificates while using default configuration. Enables the `rustls` feature and is enabled by default.
rustls-tls-native-roots = ["rustls", "dep:rustls-native-certs"]
# Uses the webpki-roots crate's root certificates while using default configuration. Enables the `rustls` feature and is enabled by default.
rustls-tls-webpki-roots = ["rustls", "dep:webpki-roots"]
# Uses aws-lc-rs as the TLS backend for Rustls. Enabled by default.
rustls-aws-lc-rs = ["rustls?/aws-lc-rs", "tokio-rustls?/aws-lc-rs"]
# Uses ring as the TLS backend for Rustls.
rustls-ring = ["rustls?/ring", "tokio-rustls?/ring"]
# Enables TLS support via native-tls.
native-tls = ["dep:native-tls", "dep:tokio-native-tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "manual_reconnect"
path = "examples/manual_reconnect.rs"
required-features = []

[[example]]
name = "rusmppc_submit_sm"
path = "examples/rusmppc_submit_sm.rs"
required-features = []

[[example]]
name = "tls_manual_rustls"
path = "examples/tls_manual_rustls.rs"
required-features = ["rustls"]

[[example]]
name = "tls_self_signed_certificate_rustls"
path = "examples/tls_self_signed_certificate_rustls.rs"
required-features = ["rustls"]

[[example]]
name = "tls_self_signed_certificate_native_tls"
path = "examples/tls_self_signed_certificate_native_tls.rs"
required-features = ["native-tls"]
