[package]
name = "rusmpps"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"
description = "A Rust SMPP simulator."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rusmpp/Rusmpp"
readme = "Readme.md"
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]
publish = false

[dependencies]
rusmpp = { path = "../rusmpp", default-features = false, features = [
    "tokio-codec",
    "tracing",
    "verbose",
] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1"
pin-project-lite = "0.2.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
humantime-serde = "1.1.1"
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
