[package]
name = "rusmppz"
version = "0.0.0"
edition = "2024"
description = "A zero copy Rust SMPP library."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JadKHaddad/Rusmpp"
readme = "Readme.md"
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]

[dependencies]
rusmpp-core = { path = "../rusmpp-core", default-features = false }
framez = { version = "0.3.0", default-features = false, optional = true }
arbitrary = { version = "1.4.2", default-features = false, features = [
    "derive_arbitrary",
], optional = true }

[features]
default = ["framez"]
# Prints byte slices like: [0x00, 0x00, 0x00, 0x6F] instead of [00, 00, 00, 6F].
pretty-hex-fmt = []
# Implements framez' Encoder/Decoder traits for the CommandCodec.
framez = ["dep:framez"]
# Implements arbitrary's Arbitrary trait for fuzz testing.
arbitrary = ["dep:arbitrary", "rusmpp-core/arbitrary"]
