[package]
name = "rusmppz"
version = "0.0.0"
edition = "2024"
description = "A zerocopy Rust SMPP library."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JadKHaddad/Rusmpp"
readme = "Readme.md"
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]

[dependencies]
rusmpp-core = { path = "../rusmpp-core", default-features = false }
framez = { version = "0.3.0", default-features = false, optional = true }
heapless = { version = "0.9.1", default-features = false }
arbitrary = { version = "1.4.2", default-features = false, features = [
    "derive_arbitrary",
], optional = true }
log = { version = "0.4.22", default-features = false, optional = true }
tracing = { version = "0.1.41", default-features = false, optional = true }
defmt = { version = "1.0.1", default-features = false, optional = true }

[dev-dependencies]
embedded-io-adapters = { version = "0.6.2", default-features = false, features = [
    "tokio-1",
] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
framez = { version = "0.3.0", default-features = false, features = ["tracing"] }

[features]
default = ["framez", "char-fmt", "tracing"]
# Implements framez' Encoder/Decoder traits for the CommandCodec.
framez = ["dep:framez"]
log = ["dep:log"]
tracing = ["dep:tracing"]
defmt = ["dep:defmt"]
pretty-hex-fmt = []
char-fmt = []

[[example]]
name = "rusmppz_client_server"
path = "examples/rusmppz_client_server.rs"
required-features = ["framez", "tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
