[package]
name = "rusmppz"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "A zerocopy Rust SMPP library."
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JadKHaddad/Rusmpp"
readme = "Readme.md"
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]

[dependencies]
rusmpp-core = { path = "../rusmpp-core", version = "0.1.1", default-features = false, features = [
    "framez",
] }

[dev-dependencies]
embedded-io-adapters = { version = "0.6.2", default-features = false, features = [
    "tokio-1",
] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
framez = { version = "0.3.0", default-features = false, features = ["tracing"] }

[features]
default = []
# Prints byte slices like: [0x00, 0x00, 0x00, 0x6F] instead of [00, 00, 00, 6F].
pretty-hex-fmt = ["rusmpp-core/pretty-hex-fmt"]
# Prints byte slices as characters.
char-fmt = ["rusmpp-core/char-fmt"]
# Enables logging via the `tracing` crate.
tracing = ["rusmpp-core/tracing"]

[[example]]
name = "rusmppz_client_server"
path = "examples/rusmppz_client_server.rs"
required-features = ["tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
