[package]
name = "rusmppyc-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusmppyc_sys"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.25.0"
pyo3-stub-gen = "0.11.1"
pyo3-stub-gen-derive = "0.11.1"
rusmpp = { path = "../../rusmpp", default-features = false }
rusmppc = { path = "../../rusmppc" }
