[package]
name = "rusmppyc"
version = "0.1.0-alpha.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusmppyc"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.25.0"
pyo3-async-runtimes = { version = "0.25.0", features = [
    "attributes",
    "tokio-runtime",
] }
pyo3-stub-gen = "0.11.1"
pyo3-stub-gen-derive = "0.11.1"
futures = "0.3.3"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
bytes = "1.10.1"
humantime = "2.2.0"
pyo3-log = "0.12.4"
tracing = { version = "0.1.41", features = ["log-always"] }
rusmpp = { path = "../../rusmpp", default-features = false }
rusmppc = { path = "../../rusmppc" }

[[bin]]
name = "stub-gen"
