[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "rusmppyc"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "An async SMPP v5 Python client powered by Rust"
readme = "Readme.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Jad K. Haddad", email = "jadkhaddad@gmail.com" }]
maintainers = [{ name = "Jad K. Haddad", email = "jadkhaddad@gmail.com" }]
keywords = ["smpp", "smsc", "messaging", "networking", "protocol"]

[project.urls]
Homepage = "https://github.com/Rusmpp/Rusmpp"
Repository = "https://github.com/Rusmpp/Rusmpp.git"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]
strip = true
python-source = "python"
