[package]
name = "rusmppyo3-reflection"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rusmpp = { path = "../../rusmpp", default-features = false, features = [
    "serde-deserialize-unchecked",
    "verbose",
] }
rusmppc = { path = "../../rusmppc" }
serde-reflection = "0.5.0"
serde-generate = "0.32.0"

[[bin]]
name = "generate"
